fix overflow in Cart

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   src: local("WorkSans"), url(./fonts/WorkSans.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "RockSalt";
+  src: local("RockSalt"), url(./fonts/RockSalt.ttf) format("truetype");
+}
 * {
   margin: 0;
   padding: 0;
